fix: align pdf viewer and theming for angular 18

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @use '@angular/material' as mat;
+@use '@angular/material/typography' as mat-typography;
 
 @tailwind base;
 @tailwind components;
@@ -11,7 +12,7 @@ $light-theme: mat.define-theme(
       primary: mat.$cyan-palette,
       tertiary: mat.$blue-palette
     ),
-    typography: mat.define-typography-config(),
+    typography: mat-typography.define-typography-config(),
     density: 0
   )
 );
@@ -23,7 +24,7 @@ $dark-theme: mat.define-theme(
       primary: mat.$cyan-palette,
       tertiary: mat.$blue-palette
     ),
-    typography: mat.define-typography-config(),
+    typography: mat-typography.define-typography-config(),
     density: 0
   )
 );
